workspace = { members = [
    "examples/spritesheet_test",
    "examples/bullet_heaven",
    "examples/audio_test",
    "examples/pixel_scaling_test",
    "examples/camera_test",
    "examples/mask_test",
] }
[package]
name = "ABC_Game_Engine"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Almloff <ethanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ABC-Engine/ABC-Game-Engine"

[dependencies]
ABC-ECS = { path = "../ABC-ECS" }
colored = "2.0.4"
crossterm = "0.27.0"
dioxus-debug-cell = "0.1.1"
image = "0.24.7"
pixel-canvas = "0.2.3"
rand = "0.8.5"
rodio = "0.17.3"
winput = "0.2.5"
