workspace = { members = [
    "examples/spritesheet_example",
    "examples/bullet_heaven",
    "examples/audio_example",
    "examples/pixel_scaling_example",
    "examples/camera_example",
    "examples/mask_example",
    "examples/physics_example",
    "examples/platformer_example",
] }
[package]
name = "ABC_Game_Engine"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Almloff <ethanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ABC-Engine/ABC-Game-Engine"

[dependencies]
colored = "2.0.4"
crossterm = "0.27.0"
glam = "0.27.0"
image = "0.25.1"
pixel-canvas = "0.2.3"
rand = "0.8.5"
rodio = "0.17.3"
winput = "0.2.5"
ABC-ECS = "0.2.0"
