[workspace]
members = [
    "examples/audio_example",
    "examples/bullet_heaven",
    "examples/camera_example", "examples/crash",
    "examples/pixel_scaling_example",
    "examples/platformer_example",
    "examples/render_example",
    "examples/spritesheet_example", "examples/ui",
]

[package]
name = "ABC_Game_Engine"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Almloff <ethanalmloff@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ABC-Engine/ABC-Game-Engine"

[dependencies]
glam = "0.27.0"
rand = "0.8.5"
rodio = "0.17.3"
ABC-ECS = { git = "https://github.com/ABC-Engine/ABC-ECS"}
fxhash = "0.2.1"
rapier2d = "0.19.0"
tracing = "0.1.40"
gilrs = "0.10.7"
chrono = "0.4.38"
serde = "1.0.204"

[patch.'https://github.com/ABC-Engine/ABC-Game-Engine']
ABC_Game_Engine = { path = "." }

[dev-dependencies]
console_renderer = { git = "https://github.com/ABC-Engine/console_renderer"}
