[package]
name = "bullet_heaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ABC_Game_Engine = { path = "../../" }
#console_renderer = { git = "https://github.com/ABC-Engine/console_renderer" }
console_renderer = { path = "../../../console_renderer" }
rand = "0.8.5"

[profile.release]
opt-level = 3
