[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
console_renderer = { path = "../../../console_renderer" }
crossterm = "0.27.0"
dioxus-debug-cell = "0.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
